feat: add Supabase integration with Alembic migrations
- Add SQLAlchemy + Alembic for database migrations
- Add User model with timestamps
- Configure Supabase Session Pooler connection (IPv4)
- Add /db-status endpoint to check database connection
- Add DATABASE.md documentation

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,16 @@
 # ===========================================
-# LOCAL DEVELOPMENT ENVIRONMENT
+# COPY THIS FILE TO .env AND FILL VALUES
 # ===========================================
 
-# Supabase Configuration (learnenglishzero-stg)
-SUPABASE_URL=https://mgztjcjelknkpwlipqxi.supabase.co
+# Supabase Configuration
+# Lấy từ: Supabase Dashboard → Project Settings → API
+SUPABASE_URL=https://your-project-ref.supabase.co
 SUPABASE_KEY=your_supabase_anon_key_here
+
+# Database URL - Session Pooler (IPv4 compatible)
+# Lấy từ: Supabase Dashboard → Connect → Session pooler
+# Format: postgresql+psycopg://postgres.[project-ref]:[password]@aws-1-[region].pooler.supabase.com:5432/postgres
+DATABASE_URL=postgresql+psycopg://postgres.your-project-ref:your-password@aws-1-ap-southeast-1.pooler.supabase.com:5432/postgres
 
 # App Configuration
 DEBUG=true
